# CPP_

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
app/: main.cpp
include/app/: AppConfig.h  CommandRunner.h
include/foc/: FocController.h
include/stm32/: Stm32FirmwareUpdater.h
include/transport/: ITransport.h  SerialPort.h
src/app/: AppConfig.cpp  CommandRunner.cpp
src/foc/: FocController.cpp
src/stm32/: Stm32FirmwareUpdater.cpp
src/transport/: SerialPort.cpp
